--- a/vhosts/web.conf
+++ b/vhosts/web.conf
@@ -6,7 +6,7 @@ server {
 
         index index.php index.html index.htm;
 
-        root /var/www/html;
+        root /var/www/html/public;
 
         location ~ /.well-known/acme-challenge {
                 allow all;
