--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,19 +20,24 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-      args:
-        uid: ${UID}
     container_name: tiny_be_web
     restart: unless-stopped
-    ports:
-      - 8989:80
     environment:
       - DB_HOST=tiny_be_db
       - DB_POST=3306
       - DB_USERNAME=u_tiny_be
       - DB_PASSWORD=y7mt7yyGQGK9UWav
       - DB_DATABASE=tiny
-      - APACHE_RUN_USER=#1000
-      - APACHE_RUN_GROUP=#1000
     volumes:
       - ./:/var/www/html
+  tiny_be_nginx:
+    depends_on:
+      - tiny_be_web
+    image: nginx:alpine
+    container_name: tiny_be_nginx
+    restart: unless-stopped
+    ports:
+      - "8989:80"
+    volumes:
+      - ./:/var/www/html
+      - ./vhosts:/etc/nginx/conf.d
