--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@ DB_USERNAME=u_tiny_be
 DB_PASSWORD=y7mt7yyGQGK9UWav
 DB_DATABASE=tiny
 APP=production
-APP_KEY=production
+APP_KEY=8@N41M1&mUY5!Q6E
+IV=y6@LAHIyE5eJ@947
+ENCRYPTION_KEY=8@N41M1&mUY5!Q6E
