Update github action

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,5 +12,5 @@ jobs:
           rsync -av ./ /data/vhosts/TinyUrl-BE/.
           cd /data/vhosts/TinyUrl-BE
           chown -R www-data:www-data *
-          docker exec -it tiny_be_web php artisan cache:clear
-          docker exec -it tiny_be_web php artisan config:cache
+          docker exec -i tiny_be_web php artisan cache:clear
+          docker exec -i tiny_be_web php artisan config:cache
