--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ DB_USERNAME=u_tiny_be
 DB_PASSWORD=y7mt7yyGQGK9UWav
 DB_DATABASE=tiny
 APP=production
-APP_KEY=8@N41M1&mUY5!Q6E
+APP_KEY=
 IV=y6@LAHIyE5eJ@947
 ENCRYPTION_KEY=8@N41M1&mUY5!Q6E
