--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,5 +12,6 @@ jobs:
           rsync -av ./ /data/vhosts/TinyUrl-BE/.
           cd /data/vhosts/TinyUrl-BE
           chown -R www-data:www-data *
+          docker exec -i tiny_be_web php artisan key:generate
           docker exec -i tiny_be_web php artisan cache:clear
           docker exec -i tiny_be_web php artisan config:cache
