--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,7 +11,6 @@ jobs:
       run: |
           rsync -av ./ /data/vhosts/TinyUrl-BE/.
           cd /data/vhosts/TinyUrl-BE
-          chown -R www-data:www-data *
+          chown -R www-data:www-data /data/vhosts/TinyUrl-BE
           docker exec -i tiny_be_web php artisan key:generate
-          docker exec -i tiny_be_web php artisan cache:clear
           docker exec -i tiny_be_web php artisan config:cache
