--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.3|^8.0",
         "ext-json": "*",
         "ext-openssl": "*",
+        "doctrine/dbal": "2.13.9",
         "fruitcake/laravel-cors": "^2.0",
         "google/apiclient": "2.12.1",
         "google/apiclient-services": "^0.275.0",
