--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
-DB_HOST=tiny_be_db
+DB_HOST=localhost
 DB_POST=3306
-DB_USERNAME=u_tiny_be
-DB_PASSWORD=y7mt7yyGQGK9UWav
+DB_USERNAME=root
+DB_PASSWORD=
 DB_DATABASE=tiny
 APP=production
 APP_KEY=base64:TvjulzxdAmLFOr1RAbmtOelnaMfxCaaaCc/o0xvRfAQ=
 IV=y6@LAHIyE5eJ@947
 ENCRYPTION_KEY=8@N41M1&mUY5!Q6E
+ADMIN_USERNAME="admin"
+ADMIN_PASSWORD="$2y$10$92IXUNpkjO0rOQ5byMi.Ye4oKoEa3Ro9llC/.og/at2.uheWG/igi"
+ADMIN_EMAIL="admin@molinetwork.com"
