--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.5",
-        "mehradsadeghi/laravel-filter-querystring": "^1.1"
+        "mehradsadeghi/laravel-filter-querystring": "^1.1",
+        "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
