--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,6 @@ ENCRYPTION_KEY=
 ADMIN_EMAIL=
 ADMIN_NAME=
 ADMIN_PASSWORD=
-MJ_APIKEY_PUBLIC=
-MJ_APIKEY_PRIVATE=
 X_RAPIDAPI_KEY=
-MAIL_USERNAME=
+SOCAPP_MAIL_ADDRESS=socapp@molinetwork.com
 FE_URL =
